Worked on SEO and blog functionality

--- a/index.html
+++ b/index.html
@@ -3,18 +3,59 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FlowPay - Secure Creator Payments</title>
-    <meta name="description" content="Secure escrow payments for creator deals. FlowPay enables brands to fund creator partnerships upfront with automatic release on deliverable approval." />
-    <meta name="author" content="Lovable" />
+    <title>FlowPay - Secure Escrow Payments for Creator Economy | Get Paid Instantly</title>
+    <meta name="description" content="FlowPay revolutionizes creator payments with secure escrow services. Brands fund partnerships upfront, creators get paid instantly upon approval. Join 10,000+ successful partnerships." />
+    <meta name="keywords" content="creator payments, escrow services, influencer marketing, brand partnerships, secure payments, creator economy, instant payouts, content creator, brand deals" />
+    <meta name="author" content="FlowPay" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://flowpay.app" />
 
-    <meta property="og:title" content="FlowPay - Secure Creator Payments" />
-    <meta property="og:description" content="Secure escrow payments for creator deals. FlowPay enables brands to fund creator partnerships upfront with automatic release on deliverable approval." />
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://flowpay.app" />
+    <meta property="og:title" content="FlowPay - Secure Escrow Payments for Creator Economy" />
+    <meta property="og:description" content="Revolutionary escrow platform enabling instant creator payments. Trusted by 10,000+ partnerships. Secure, fast, reliable." />
+    <meta property="og:image" content="https://flowpay.app/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="FlowPay" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:url" content="https://flowpay.app" />
+    <meta name="twitter:title" content="FlowPay - Secure Escrow Payments for Creator Economy" />
+    <meta name="twitter:description" content="Revolutionary escrow platform enabling instant creator payments. Trusted by 10,000+ partnerships." />
+    <meta name="twitter:image" content="https://flowpay.app/og-image.jpg" />
+    <meta name="twitter:creator" content="@flowpayapp" />
+    <meta name="twitter:site" content="@flowpayapp" />
+
+    <!-- Additional SEO -->
+    <meta name="theme-color" content="#3b82f6" />
+    <meta name="msapplication-TileColor" content="#3b82f6" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- Schema.org structured data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "FlowPay",
+      "url": "https://flowpay.app",
+      "logo": "https://flowpay.app/logo.png",
+      "description": "Secure escrow payments for creator economy partnerships",
+      "sameAs": [
+        "https://twitter.com/flowpayapp",
+        "https://linkedin.com/company/flowpay"
+      ],
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "customer service",
+        "email": "support@flowpay.app"
+      }
+    }
+    </script>
   </head>
 
   <body>
